NEW55740
CSS3 multi column layout doesn't work as expected with min-height
https://bugs.webkit.org/show_bug.cgi?id=55740
Summary CSS3 multi column layout doesn't work as expected with min-height
Kenichi Ishibashi
Reported 2011-03-03 20:27:04 PST
For details, see http://crbug.com/65731 I've investigated briefly this problem. The cause is in RenderBlock::layoutBlock(). If the RenderBlock has multi column, it computes columnHeight by using computeLogicalHeight() beforehand the actual layout. When the block has min-height property, the columnHeight set to its value even if the height should be more larger because there is no computed height at that moment. It seems to me that we can't determine the column height at that point, but I'm not sure because I'm not familiar with layout/rendering well. Could anyone give me advice how to cope with this problem?
Attachments
Example XHTML from test forum post. (4.39 KB, application/xhtml+xml)
2011-07-26 15:43 PDT, John A. Bilicki III
no flags
John A. Bilicki III
Comment 1 2011-07-26 15:43:50 PDT
Created attachment 102065 [details] Example XHTML from test forum post. The bug enforces height instead of min-height I think, this is exceptionally annoying and present in Safari 5.1 and Chrome 13 beta.
Ahmad Saleem
Comment 2 2022-12-15 14:17:55 PST
The Chrome Bug in Comment 0 was fixed by this commit: Commit - https://chromium.googlesource.com/chromium/src/+/79a9f512a11425ca0e55243dc10628f45484feb9 I took the above and test all test cases and Safari 16.2 passes all of them and if I see 1-1 patch and Webkit Source, there were few differences, which I tried to fix in this PR: https://github.com/WebKit/WebKit/pull/6715 It passes all tests and does not have any existing test failures. I am not sure on how much it would fix above attached test case but just wanted to share my update before I close my PR since it is not reviewed.
Note You need to log in before you can comment on or make changes to this bug.