Multicol: Min-height should have no effect if content is taller and height is auto

Multicol: Min-height should have no effect if content is taller and height is auto
https://bugs.webkit.org/show_bug.cgi?id=55740

Reviewed by NOBODY (OOPS!).

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=202162

Calling computeLogicalHeight() before layout is somewhat problematic, since we
don't know the content/intrinsic height at that point. Specifying that height
as 0 would return the value of min-height (if specified) and make the multicol
code believe that height is constrained, and prevent columns from getting any
taller than that. In other words, min-height was more or less treated as
max-height in multicol.

Since we only want to know if we have a non-auto height that could constrain
the column heights, we can just skip computeLogicalHeight() if height is
indefinite.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(RenderBlockFlow::checkForPaginationLogicalHeightChange): Update to add "isRenderView" and also add maximum condition for ColumnHeight
* LayoutTests/fast/multicol/min-height-much-greater-than-content.html: Add Test Case
LayoutTests/fast/multicol/min-height-much-greater-than-content-expected.txt: Add Test Case Expectation
* LayoutTests/fast/multicol/min-height-less-than-height.html: Add Test Case
* LayoutTests/fast/multicol/min-height-less-than-height-expected.txt: Add Test Case Expectations
* LayoutTests/fast/multicol/min-height-less-than-content.html: Add Test Case
* LayoutTests/fast/multicol/min-height-less-than-content-expected.txt: Add Test Case Expectations
* LayoutTests/fast/multicol/min-height-greater-than-height.html: Add Test Case
* LayoutTests/fast/multicol/min-height-greater-than-height-expected.txt: Add Test Case Expectations
* LayoutTests/fast/multicol/min-height-greater-than-content.html: Add Test Case
* LayoutTests/fast/multicol/min-height-greater-than-content-expected.txt: Add Test Case Expectation